WIP: Bump upstreams
Adopt:
- odlparent-13.0.1
- infrautils-6.0.0
- yangtools-11.0.0-SNAPSHOT
- mdsal-12.0.0-SNAPSHOT
- controller-8.0.0-SNAPSHOT
- aaa-0.18.0-SNAPSHOT
- netconf-6.0.0-SNAPSHOT

// FIXME: deal with dependency enforcement

Change-Id: I439e4c3d5f920d324e242d5b9cd2eae564704c4f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>